<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.IntroActivity">
    <TextView
        android:id="@+id/welcome"
        android:layout_width="169dp"
        android:layout_height="32dp"
        android:fontFamily="@font/poppins_bold"
        android:text="WELCOME TO"
        android:textColor="@color/purple"
        android:textSize="24dp"

        android:width="95dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.094" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="172dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:srcCompat="@drawable/yatralogo" />

    <Button
        android:id="@+id/login"
        android:layout_width="319dp"
        android:layout_height="40dp"
        android:layout_marginTop="77dp"
        android:background="@drawable/custom_btn_bg"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textSize="16sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        />

    <Button
        android:id="@+id/signup"
        android:layout_width="319dp"
        android:layout_height="40dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/custom_btn_bg"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:backgroundTint="@color/purple"/>

    <TextView
        android:id="@+id/rent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="22dp"
        android:alpha="0.5"
        android:text="@string/rent"
        android:textColor="@color/purple"
        app:layout_constraintBottom_toTopOf="@+id/rent1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup" />

    <TextView
        android:id="@+id/rent1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:alpha="0.5"
        android:text="@string/rent1"
        android:textColor="@color/purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="412dp"
        android:layout_height="702dp"
        android:layout_marginTop="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:srcCompat="@drawable/design" />
</androidx.constraintlayout.widget.ConstraintLayout>