<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword2Activity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/verification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:src="@drawable/back_arrow" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Verification"
                    android:textSize="18dp"
                    android:textColor="@color/purple"
                    android:fontFamily="@font/poppins_bold"
                    android:textAlignment="center"
                    />
            </LinearLayout>
            <TextView
                android:id="@+id/verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/verify"
                android:textColor="@color/purple"
                android:textSize="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.088"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/verify1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/verify1"
                android:textColor="@color/purple"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.198"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verify" />

            <!--<EditText
                android:id="@+id/code"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_edit_text"
                android:hint="Enter Code Here"
                android:paddingHorizontal="20dp"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/verify1" />-->



            <com.chaos.view.PinView
                android:id="@+id/pinView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="number"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="#FFFFF7"
                android:textColor="@color/purple"
                android:textSize="18sp"
                android:textStyle="bold"
                app:lineColor="@color/black"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                app:itemCount="6"
                app:itemHeight="45dp"
                app:itemRadius="4dp"
                app:viewType="rectangle"
                app:cursorColor="@color/white"
                app:lineWidth="2dp"/>


            <Button
                android:id="@+id/btnVerify"
                android:layout_width="319dp"
                android:layout_height="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/custom_btn_bg"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/verify2"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/code" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnVerify">

                <TextView
                    android:id="@+id/Code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Don’t Get Code ?"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/resend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="RESEND"
                    android:textColor="@color/purple"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@id/Code"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/Code"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>



        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>